# flake-templates

./: .flake.nix.swp  README.md  flake.nix
blank/: flake.nix
python/: flake.nix
python-jupyterWith/: flake.nix
python-jupyterWith/kernels/python/: default.nix  pyproject.toml
python-poetry2nix/: flake.nix  pyproject.toml
